Fixed an issue where the add new button would still be visible when the drawer was expended full screen and with the placement of add new button for list options.

--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -416,7 +416,7 @@ All styles used within the drawer
   -webkit-transition: all 0.75s ease;
   transition: all 0.75s ease; }
 
-.nf-drawer-opened .nf-add-new {
+.nf-drawer-opened #nf-app-sub-header .nf-add-new {
   top: 95px !important;
   text-indent: -99999px; }
 
@@ -857,7 +857,7 @@ Various custom field styles
   line-height: 32px;
   position: relative;
   height: 32px;
-  z-index: 100;
+  z-index: 98;
   text-indent: 0px;
   overflow: hidden;
   -webkit-transition: width 1.0s ease 0s,height 1.0s ease 0s,text-indent 1.0s ease,top 1.0s ease,left 1.0s ease;
