--- a/assets/scss/admin/add-new.scss
+++ b/assets/scss/admin/add-new.scss
@@ -6,7 +6,7 @@
     line-height: 32px;
     position: relative;
     height: 32px;
-    z-index: 100;
+    z-index: 98;
     text-indent: 0px;
     overflow: hidden;
     transition: width 1.0s ease 0s,height 1.0s ease 0s,text-indent 1.0s ease,top 1.0s ease,left 1.0s ease;
